# vircampype

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  compare_reductions.py  pyproject.toml  requirements.txt  setup.py  ultra-code-review.md  ultracode-fable-review.md  vircampype.py  vircampype.yml
.github/workflows/: docker.yml  test_on_push.yml  tests.yml
cluster/: README.md  cluster.yml.template
tests/: test_astromatic.py  test_class_star_multi_seeing.py  test_cluster.py  test_completeness.py  test_cube.py  test_datatools.py  test_errors.py  test_fits_collections.py  test_fitstools.py  test_imagetools.py  test_logsetup.py  test_mathtools.py  test_messaging_shim.py  test_miscellaneous.py  test_miscellaneous_projection.py  test_mmm.py  test_photometry.py  test_pipeline_status.py  test_progress.py  test_qc_summary.py  test_scratch.py  test_setup_paths.py  test_systemtools.py  test_systemtools_capture.py  test_tabletools.py  test_viziertools.py  test_wcstools.py  test_worker.py
vircampype/: __init__.py  setup.py  test.py  vircampype.yaml
vircampype/data/: cube.py
vircampype/fits/: common.py
vircampype/miscellaneous/: projection.py  projections.py  sourcemasks.py
vircampype/pipeline/: cluster.py  errors.py  log.py  logsetup.py  main.py  misc.py  progress.py  setup.py  status.py  worker.py
vircampype/resources/: deVaucouleurs91.fits
vircampype/scripts/: Ophiuchus_control_H.yml  Ophiuchus_control_J.yml  Ophiuchus_control_Ks.yml
vircampype/setup/: __init__.py  calibration.py  data.py  folders.py  header.py  (+1 more)
(+288 files in other folders)
